...
                NavigationLink {
                    AboutView()
                } label: {
                    Label("このアプリについて", systemImage: "info.circle")
                }
            } header: {
                Text("一般")
            }

            // データ管理
            Section {
                Button(role: .destructive) {
                    resetSampleData()
...
